CHANGELOG

UNRELEASED
    * fix: send a descriptive timeout error when it occurs
    * chore: add headers debugging

2015-05-23 3.4.0
    * FIX: Remove debugging messages from builds
      fixes #91
      fixes #86
    * FIX: Handle badly formatted JSON
      fixes #89
      fixes #90
    * FIX: Stop bytes sent/received debug on node 0.12 when socket closes
    * test: Test on only 3 browsers in travis
      fixes #61
    * test: split desktop/mobile into a travis matrix, reduces travis timeouts
    * feat: add client.batch()
    * feature: getObjects now accepts attributesToRetrieve:
      signature: getObjects(objectIDs, attributesToRetrieve, callback)
    * fix: send `x-algolia-agent` instead of `x-user-agent`
    * fix: clone cached results hits sent
      fixes #79
    * feat: New parameters for API keys
      Added description, referers, queryParameters
      ref: https://www.algolia.com/changes#released-2015-05-08
    * fix: IE11 xhr cache was fixed by adding cache-control: no-cache in API headers
    * test: add integration testing and rework the travis tasks

2015-05-14  3.3.2
    * FIX: more fixes to the use of $q() in the angular build, now compatible with 1.2.xx and tested

2015-05-12  3.3.1
    * FIX: Compatibility with AngularJS old promise implementation
      We now use $q.defer() instead of $q()

2015-05-12  3.3.0
    * FEATURE: expose window.algoliasearch = algoliasearch in jquery/angular plugins. So that
    you can use the original algoliasearch() implem in plugins. Otherwise you would have to load both

2015-05-11  3.2.4
    * FIX: 15s inactivity timeout for nodejs implementation, should help high latency/low connection users
    * CHORE: test on iojs2
    * CHORE: debugging messages now more focused and less verbose
    * PERF: use JSON.stringify only once per request

2015-05-09  3.2.3
    * FIX: Parse build requires a charset on requests

2015-05-06  3.2.2
    * FIX :  missing require (crypto) for node.js client (#84)

2015-04-29  3.2.1