@@ -9,7 +9,7 @@
   "scripts": {
     "build": "PACKAGE_VERSION=$(json -f src/version.json) ./scripts/build",
     "release": "git clean dist/ -f && git checkout dist/ && ./scripts/release && APP_ENV=production npm run build",
-    "test": "npm run test-phantom && npm run test-node && npm run lint",
+    "test": "npm run test-phantom-unit && npm run test-node-unit && npm run lint",
     "test-browser-unit": "./scripts/test-browser",
     "test-node-unit": "node test/run-node.js",
     "test-phantom-unit": "DEBUG=zuul* zuul --no-coverage --phantom -- test/run-browser.js",
